--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,4 +25,15 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+
+    // stuff i added
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.14' // ftc dashboard
+    testImplementation 'junit:junit:4.12' // junit for testing
+    implementation 'org.ftclib.ftclib:core:2.0.1' // ftc lib
+
+    //roadrunner 0.5.5
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+
 }
