--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,6 +14,7 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'kotlin-android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -30,6 +31,7 @@ dependencies {
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.14' // ftc dashboard
     testImplementation 'junit:junit:4.12' // junit for testing
     implementation 'org.ftclib.ftclib:core:2.0.1' // ftc lib
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     //roadrunner 0.5.5
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
